# sensu-run

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  appveyor.yml  cabal.project.freeze  cabal.project.freeze.ghc-8.0.2  cabal.project.freeze.ghc-8.2.2  cabal.project.freeze.ghc-8.4.1  cabal.project.freeze.ghc-8.4.4  cabal.project.freeze.ghc-8.6.3  sensu-run.cabal  sensu-run.hs  stack.yaml
.travis/: deploy.patch  osx.patch  releases.patch
System/Process/: Kill.hs
