name: sensu-run
version: 0.0.0
synopsis: Run a command and send the result to Sensu client socket
-- description:
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: maoe@foldr.in
copyright: Copyright (C) 2016-2017 Mitsutoshi Aoe
category: System
build-type: Simple
extra-source-files: CHANGELOG.md
cabal-version: >= 1.10
tested-with: GHC == 8.0.1

executable sensu-run
  main-is: sensu-run.hs
  build-depends:
      aeson >= 0.11 && < 1.2
    , base >= 4.9 && < 4.10
    , bytestring >= 0.10 && < 0.11
    , network >= 2.2.3 && < 2.7
    , optparse-applicative >= 0.12 && < 0.14
    , process >= 1.4 && < 1.5
    , temporary >= 1.1 && < 1.3
    , text >= 1.2.2 && < 1.3
    , time >= 1.5.0.1 && < 1.8
    , vector >= 0.11 && < 0.12
  ghc-options: -Wall -threaded
  default-language: Haskell2010
